--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ sub { bottom: -.25em; }
 }
 
 .cf:after { clear: both; }
-.cf { *zoom: 1; }
+/* .cf { *zoom: 1; } */
 
 /*for all*/
 body {
@@ -103,18 +103,7 @@ li {
   width: 86%; 
   margin: 0 auto;
 }
-/*=================================
-  Header styling starts here
-=================================*/
 
-
-
-
-
-
-/*=================================
-  Header styling ends here
-=================================*/  
 
 /*=================================
   main styling starts here
@@ -122,8 +111,31 @@ li {
 
 
 
+.expanding-cards .wrapper ul { display: flex; }
+.list li:not(:last-child) {  margin-right: 10px; }
+.list li { cursor: pointer; }
 
+.section {
+  flex: 0.1;
+  height: 150px;
+  transition:  0.7s ease-out;
+}
 
+figure {
+  width: 100%;
+  height: 100%;
+}
+
+img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 14px;
+}
+
+.active {
+  flex: 1.5;
+}
 
 
 
@@ -131,19 +143,6 @@ li {
   main styling ends here
 =================================*/
 
-/*=================================
-  footer styling starts here
-=================================*/ 
-
-
-
-
-
-
-
- /*=================================
-  footer styling ends here
-=================================*/ 
 
 /*media query starts*/
 /*media query for 995px starts here*/
