--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,14 +116,15 @@ li {
 
 .section {
   width: 7%;
-  height: 450px;
-  transition:  0.7s linear;
+  height: 100%;
+  margin-top: 25px;
+  transition: all 0.7s linear;
 }
 
 img {
   width: 100%;
   height: 100%;
-  border-radius: 14px;
+  border-radius: 30px;
   object-fit: cover;
 }
 
